--- a/06_Counting_Characters/style.css
+++ b/06_Counting_Characters/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 #butt {
-	width: 30%;
+	width: 100px;
 	align-self: center;
 }
 
@@ -44,6 +44,7 @@ body {
     display: flex;
 	flex-direction: row;
     justify-content: space-around;
+	align-items: center;
 	border-radius: 25%;
 	background-color: rgb(157, 218, 78);
 }
